- Improved SSL interface of the devserver so that it can generate
  certificates easily and load them from files.
- Refactored test client to invoke the open method on the class
  for redirects.  This makes subclassing more powerful.
- :func:`werkzeug.wsgi.make_chunk_iter` and
  :func:`werkzeug.wsgi.make_line_iter` now support processing of
  iterators and streams.

Version 0.8.3
-------------

(bugfix release, relase date to be announced)

- Fixed another issue with :func:`werkzeug.wsgi.make_line_iter`
  where lines longer than the buffer size were not handled
  properly.

Version 0.8.2
-------------

(bugfix release, released on December 16th 2011)

- Fixed a problem with request handling of the builtin server
  not responding to socket errors properly.
- The routing request redirect exception's code attribute is now
  used properly.
- Fixed a bug with shutdowns on Windows.
- Fixed a few unicode issues with non-ascii characters being
  hardcoded in URL rules.
- Fixed two property docstrings being assigned to fdel instead
  of ``__doc__``.
- Fixed an issue where CRLF line endings could be split into two
  by the line iter function, causing problems with multipart file
  uploads.

Version 0.8.1
-------------

(bugfix release, released on September 30th 2011)

- Fixed an issue with the memcache not working properly.
- Fixed an issue for Python 2.7.1 and higher that broke
  copying of multidicts with :func:`copy.copy`.
- Changed hashing methodology of immutable ordered multi dicts
  for a potential problem with alternative Python implementations.

Version 0.8
-----------

Released on September 29th 2011, codename Lötkolben

- Removed data structure specific KeyErrors for a general
  purpose :exc:`~werkzeug.exceptions.BadRequestKeyError`.
- Documented :meth:`werkzeug.wrappers.BaseRequest._load_form_data`.
- The routing system now also accepts strings instead of
  dictionaries for the `query_args` parameter since we're only
  passing them through for redirects.